Remove LaTeX from markdown in ipynb files

--- a/ Introduction to Linear Programming with Python - Part 1.ipynb
+++ b/ Introduction to Linear Programming with Python - Part 1.ipynb
@@ -18,19 +18,18 @@
     "\n",
     "We want to find the maximum solution to:\n",
     "\n",
-    "$Z = 4x + 3y$\n",
+    "Z = 4x + 3y\n",
     "\n",
     "This is known as our objective function. x and y in this equation are our decision variables.\n",
     "\n",
     "In this example, the objective function is subject to the following constraints:\n",
     "\n",
-    "$\n",
-    "  x\\geq0\\\\\n",
-    "  y\\geq2 \\\\\n",
-    "  2y\\leq25-x \\\\\n",
-    "  4y\\geq 2x - 8 \\\\\n",
-    "  y\\leq 2x-5\\\\\n",
-    "$\n",
+    "\n",
+    "  x ≥ 0  \n",
+    "  y ≥ 2  \n",
+    "  2y ≤ 25 - x  \n",
+    "  4y ≥ 2x - 8  \n",
+    "  y ≤ 2x - 5  \n",
     "\n",
     "We'll begin by graphing this problem"
    ]
@@ -107,14 +106,16 @@
     "\n",
     "The four corners are between the lines:\n",
     "\n",
-    "  $y\\geq2 \\text{ and } 4y\\geq 2x-8\\\\\n",
-    "  2y\\leq25-x \\text{ and } y\\leq 2x-5\\\\\n",
-    "  2y\\leq25-x \\text{ and } 4y\\geq 2x-8\\\\\n",
-    "  y\\geq2 \\text{ and } y\\leq 2x-5 \\\\$\n",
+    "| Line 1        | Line 2        | \n",
+    "| ------------- |:-------------:| \n",
+    "| y ≥ 2         | 4y ≥ 2x - 8   | \n",
+    "| 2y ≤ 25 - x   | y ≤ 2x - 5    | \n",
+    "| 2y ≤ 25 - x   | 4y ≥ 2x - 8   |\n",
+    "| y ≥ 2         | y ≤ 2x - 5    |\n",
     "\n",
     "So keeping in mind that:\n",
     "\n",
-    "$Z = 4x + 3y$\n",
+    "Z = 4x + 3y\n",
     "\n",
     "We can calculate Z for each corner:"
    ]
@@ -125,41 +126,37 @@
    "source": [
     "1)\n",
     "\n",
-    "$y\\geq2 \\text{ and } 4y\\geq 2x-8\\\\\n",
-    "2 = \\frac{2x-8}{4}\\\\\n",
-    "x = 8\\\\\n",
-    "y = 2 \\\\\n",
-    "Z = 38\n",
-    "$\n",
+    "  y ≥ 2 and 4y ≥ 2x - 8  \n",
+    "  2 = (2x - 8) / 4  \n",
+    "  x = 8  \n",
+    "  y = 2  \n",
+    "  Z = 38  \n",
     "\n",
     "\n",
     "2)\n",
     "\n",
-    "$2y\\leq25-x \\text{ and } y\\leq 2x-5\\\\\n",
-    "\\frac{25-x}{2} = 2x-5 \\\\\n",
-    "x = 7 \\\\\n",
-    "y = 9 \\\\\n",
-    "Z = 55 \\\\\n",
-    "$\n",
+    "  2y ≤ 25 - x and y ≤ 2x - 5  \n",
+    "  (25 - x) / 2 = (2x - 5)  \n",
+    "  x = 7  \n",
+    "  y = 9  \n",
+    "  Z = 55  \n",
     "\n",
     "\n",
     "3)\n",
     "\n",
-    "$2y\\leq25-x \\text{ and } 4y\\geq 2x-8\\\\\n",
-    "\\frac{25-x}{2} = \\frac{2x-8}{4} \\\\\n",
-    "x = 14.5 \\\\\n",
-    "y = 5.25 \\\\\n",
-    "Z = 73.75\n",
-    "$\n",
-    "\n",
+    "  2y ≤ 25 - x and 4y ≥ 2x - 8  \n",
+    "  (25 - x) / 2 = (2x - 8) / 4  \n",
+    "  x = 14.5  \n",
+    "  y = 5.25  \n",
+    "  Z = 73.75  \n",
     "\n",
     "4)\n",
     "\n",
-    "$y\\geq2 \\text{ and } y\\leq 2x-5 \\\\\n",
-    "2 = 2x-5 \\\\\n",
-    "x = 3.5 \\\\\n",
-    "y = 2 \\\\\n",
-    "Z = 20$ \\\\"
+    "  y ≥ 2 and y ≤ 2x - 5  \n",
+    "  2 = 2x-5  \n",
+    "  x = 3.5  \n",
+    "  y = 2  \n",
+    "  Z = 20  "
    ]
   },
   {
@@ -174,21 +171,12 @@
     "As the numbers of constraints and variables increase, it becomes far more difficult to graph these problems and work out all the vertices.\n",
     "For example, if there were a third variable:\n",
     "\n",
-    "$Z=Ax+By+Cz$\n",
+    "Z = Ax + By + Cz\n",
     "\n",
     "We would have to graph in three dimensions (x, y and z).\n",
     "\n",
     "In the next few notebooks, we'll take a look at how we can use python and the PuLP package to solve this linear programming problem, as well as some more complex problems"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
