--- a/ Introduction to Linear Programming with Python - Part 6.ipynb
+++ b/ Introduction to Linear Programming with Python - Part 6.ipynb
@@ -19,7 +19,7 @@
     "First we'll work through some theory, then a real world example as an extension of part 5's example at the end.\n",
     "\n",
     "#### Conditional statement\n",
-    "To start simply, if we have the binary constraint x1 and we want:\n",
+    "To start simply, if we have the binary constraint x<sub>1</sub> and we want:\n",
     "\n",
     "```python\n",
     "if x1 == 1:\n",
@@ -61,7 +61,7 @@
     "\n",
     "Now for something a little more complex, we can coerce a particular binary constraint to be 1 based on the states of 2 other binary constraints.\n",
     "\n",
-    "If we have binary constraints $x_1$ and $x_2$ and we want to achieve the following:\n",
+    "If we have binary constraints x<sub>1</sub> and x<sub>2</sub> and we want to achieve the following:\n",
     "\n",
     "```python\n",
     "if x1 == 1 and x2 == 0:\n",
@@ -70,7 +70,7 @@
     "    y1 == 0\n",
     "```\n",
     "\n",
-    "So that $y_1$ is only 1 in the case that $x_1$ is 1 and $x_2$ is 0. We can use the following 3 constraints to achieve this:\n",
+    "So that $y_1$ is only 1 in the case that x<sub>1</sub> is 1 and x<sub>2</sub> is 0. We can use the following 3 constraints to achieve this:\n",
     "\n",
     "```python\n",
     "[\n",
@@ -85,25 +85,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll take a moment to deconstruct this. In our preferred case that $x_1 = 1$ and $x_2 = 0$, the three statments resolve to:\n",
-    "* $y_1 \\geq 1$\n",
-    "* $y_1 \\leq 1$\n",
-    "* $y_1 \\leq 1$\n",
+    "We'll take a moment to deconstruct this. In our preferred case that x<sub>1</sub> = 1 and x<sub>2</sub> = 0, the three statments resolve to:\n",
+    "* y<sub>1</sub> ≥ 1\n",
+    "* y<sub>1</sub> ≤ 1\n",
+    "* y<sub>1</sub> ≤ 1\n",
     "\n",
     "The only value of $y_1$ that fulfils each of these is 1.\n",
     "\n",
-    "In any other case, however, $y_1$ will be zero. Let's take another example, say $x_1 = 0$ and $x_2 = 1$. This resolves to:\n",
-    "* $y_1 \\geq -1$\n",
-    "* $y_1 \\leq 0$\n",
-    "* $y_1 \\leq 0$\n",
+    "In any other case, however, y<sub>1</sub> will be zero. Let's take another example, say x<sub>1</sub> = 0 and x<sub>2</sub> = 1. This resolves to:\n",
+    "* y<sub>1</sub> ≥ -1\n",
+    "* y<sub>1</sub> ≤ 0\n",
+    "* y<sub>1</sub> ≤ 0\n",
     "\n",
-    "Given that y1 is a binary variable, the only value of $y_1$ that can fulfil each of these is 0.\n",
+    "Given that y<sub>1</sub> is a binary variable, the only value of y<sub>1</sub> that can fulfil each of these is 0.\n",
     "\n",
-    "You can construct 3 constraints so that $y_1$ is equal to 1, only in the case you're interested in out of the 4 following options:\n",
-    "* $x_1 = 1 \\text{ and } x_2 = 1 $\n",
-    "* $x_1 = 1 \\text{ and } x_2 = 0 $\n",
-    "* $x_1 = 0 \\text{ and } x_2 = 1 $\n",
-    "* $x_1 = 0 \\text{ and } x_2 = 0 $\n",
+    "You can construct 3 constraints so that y<sub>1</sub> is equal to 1, only in the case you're interested in out of the 4 following options:\n",
+    "* x<sub>1</sub> = 1 and x<sub>2</sub> = 1 \n",
+    "* x<sub>1</sub> = 1 and x<sub>2</sub> = 0 \n",
+    "* x<sub>1</sub> = 0 and x<sub>2</sub> = 1 \n",
+    "* x<sub>1</sub> = 0 and x<sub>2</sub> = 0 \n",
     "\n",
     "I have created a function for exactly this purpose to cover all cases:"
    ]
@@ -171,22 +171,22 @@
     "```\n",
     "\n",
     "So that:\n",
-    "* if $x_1$ is 1 and $x_2$ is 1:\n",
-    "  * $y_1 \\leq 2$\n",
-    "  * $2y_1 \\geq 2$\n",
-    "  * $y_1 \\text{ must equal } 1$\n",
-    "* if $x_1$ is 1 and $x_2$ is 0:\n",
-    "  * $y_1 \\leq 1$\n",
-    "  * $2y_1 \\geq 1$\n",
-    "  * $y_1 \\text{ must equal } 1$\n",
-    "* if $x_1$ is 0 and $x_2$ is 1:\n",
-    "  * $y_1 \\leq 1$\n",
-    "  * $2y_1 \\geq 1$\n",
-    "  * $y_1 \\text{ must equal } 1$\n",
-    "* if $x_1$ is 0 and $x_2$ is 0:\n",
-    "  * $y_1 \\leq 0$\n",
-    "  * $2y_1 \\geq 0$\n",
-    "  * $y_1 \\text{ must equal } 0$\n",
+    "* if x<sub>1</sub> is 1 and x<sub>2</sub> is 1:\n",
+    "  * y<sub>1</sub> ≤ 2\n",
+    "  * 2y<sub>1</sub> ≥ 2\n",
+    "  * y<sub>1</sub> must equal 1\n",
+    "* if x<sub>1</sub> is 1 and x<sub>2</sub> is 0:\n",
+    "  * y<sub>1</sub> ≤ 1\n",
+    "  * 2y<sub>1</sub> ≥ 1\n",
+    "  * y<sub>1</sub> must equal 1\n",
+    "* if x<sub>1</sub> is 0 and x<sub>2</sub> is 1:\n",
+    "  * y<sub>1</sub> ≤ 1\n",
+    "  * 2y<sub>1</sub> ≥ 1\n",
+    "  * y<sub>1</sub> must equal 1\n",
+    "* if x<sub>1</sub> is 0 and x<sub>2</sub> is 0:\n",
+    "  * y<sub>1</sub> ≤ 0\n",
+    "  * 2y<sub>1</sub> ≥ 0\n",
+    "  * y<sub>1</sub> must equal 0\n",
     "  \n",
     "\n",
     "Again, we'll consider the alternative option:\n",
