--- a/Introduction to Linear Programming with Python - Part 3.ipynb
+++ b/Introduction to Linear Programming with Python - Part 3.ipynb
@@ -51,19 +51,19 @@
     "\n",
     "Maximise\n",
     "\n",
-    "$Profit = 30,000A + 45,000B$\n",
+    "Profit = 30,000A + 45,000B\n",
     "\n",
     "Subject to:\n",
     "\n",
-    "$A \\geq 0$\n",
+    "A ≥ 0\n",
     "\n",
-    "$B \\geq 0$\n",
+    "B ≥ 0\n",
     "\n",
-    "$3A + 4B \\leq 30$\n",
+    "3A + 4B  ≤ 30\n",
     "\n",
-    "$5A + 6B \\leq 60$\n",
+    "5A + 6B  ≤ 60\n",
     "\n",
-    "$1.5A + 3B \\leq 21$"
+    "1.5A + 3B  ≤ 21"
    ]
   },
   {
