--- a/Introduction to Linear Programming with Python - Part 4.ipynb
+++ b/Introduction to Linear Programming with Python - Part 4.ipynb
@@ -43,35 +43,30 @@
    "source": [
     "Let's model our problem\n",
     "\n",
-    "$\n",
-    "p_e = \\text {Pork in the economy sausages (kg)} \\\\\n",
-    "w_e = \\text {Wheat in the economy sausages (kg)} \\\\\n",
-    "s_e = \\text {Starch in the economy sausages (kg)} \\\\\n",
-    "p_p = \\text {Pork in the premium sausages (kg)} \\\\\n",
-    "w_p = \\text {Wheat in the premium sausages (kg)} \\\\\n",
-    "s_p = \\text {Starch in the premium sausages (kg)} \\\\\n",
-    "$\n",
+    "  *p<sub>e</sub>* = Pork in the economy sausages (kg)  \n",
+    "  *w<sub>e</sub>* = Wheat in the economy sausages (kg)  \n",
+    "  *s<sub>e</sub>* = Starch in the economy sausages (kg)  \n",
+    "  *p<sub>p</sub>* = Pork in the premium sausages (kg)  \n",
+    "  *w<sub>p</sub>* = Wheat in the premium sausages (kg)  \n",
+    "  *s<sub>p</sub>* = Starch in the premium sausages (kg)  \n",
     "\n",
     "We want to minimise costs such that:\n",
     "\n",
-    "$\n",
-    "\\text {Cost} = 0.72(p_e + p_p) + 0.41(w_e + w_p) + 0.31(s_e + s_p) \\\\\n",
-    "$\n",
+    "Cost = 0.72(*p<sub>e</sub>* + *p<sub>p</sub>*) + 0.41(*w<sub>e</sub>* + *w<sub>p</sub>*) + 0.31(*s<sub>e</sub>* + *s<sub>p</sub>*)\n",
+    "\n",
     "\n",
     "With the following constraints:\n",
     "\n",
-    "$\n",
-    "p_e + w_e + s_e = 350 \\times 0.05 \\\\\n",
-    "p_p + w_p + s_p = 500 \\times 0.05 \\\\\n",
-    "p_e \\geq 0.4(p_e + w_e + s_e) \\\\\n",
-    "p_p \\geq 0.6(p_p + w_p + s_p) \\\\\n",
-    "s_e \\leq 0.25(p_e + w_e + s_e) \\\\\n",
-    "s_p \\leq 0.25(p_p + w_p + s_p) \\\\\n",
-    "p_e + p_p \\leq 30 \\\\\n",
-    "w_e + w_p \\leq 20 \\\\\n",
-    "s_e + s_p \\leq 17 \\\\\n",
-    "p_e + p_p \\geq 23 \\\\\n",
-    "$"
+    "  *p<sub>e</sub>* + *w<sub>e</sub>* + *s<sub>e</sub>* = 350 \\* 0.05  \n",
+    "  *p<sub>p</sub>* + *w<sub>p</sub>* + *s<sub>p</sub>* = 500 \\* 0.05  \n",
+    "  *p<sub>e</sub>* ≥ 0.4(*p<sub>e</sub>* + *w<sub>e</sub>* + *s<sub>e</sub>*)  \n",
+    "  *p<sub>p</sub>* ≥ 0.6(*p<sub>p</sub>* + *w<sub>p</sub>* + *s<sub>p</sub>*)  \n",
+    "  *s<sub>e</sub>* ≤ 0.25(*p<sub>e</sub>* + *w<sub>e</sub>* + *s<sub>e</sub>*)  \n",
+    "  *s<sub>p</sub>* ≤ 0.25(*p<sub>p</sub>* + *w<sub>p</sub>* + *s<sub>p</sub>*)  \n",
+    "  *p<sub>e</sub>* + *p<sub>p</sub>* ≤ 30  \n",
+    "  *w<sub>e</sub>* + *w<sub>p</sub>* ≤ 20  \n",
+    "  *s<sub>e</sub>* + *s<sub>p</sub>* ≤ 17  \n",
+    "  *p<sub>e</sub>* + *p<sub>p</sub>* ≥ 23"
    ]
   },
   {
