Add LaTeX formatted ipynb files

--- a/LaTeX_formatted_ipynb_files/Introduction to Linear Programming with Python - Part 5.ipynb
+++ b/LaTeX_formatted_ipynb_files/Introduction to Linear Programming with Python - Part 5.ipynb
@@ -24,9 +24,7 @@
     "\n",
     "We also know that factory B is down for maintenance in month 5.\n",
     "\n",
-    "We'll start by importing our data. \n",
-    "\n",
-    "The data is imported into a multi-index pandas DataFrame using 'Month' and 'Factory' as our index columns."
+    "We'll start by importing our data."
    ]
   },
   {
@@ -537,12 +535,12 @@
     "In this case construct constraints that have minimum and maximum capacities that are constant variables, which we multiply by the factory status.\n",
     "\n",
     "Now, either factory status is 0 and:\n",
-    "* min_production >= 0\n",
-    "* max_production <= 0\n",
+    "* $ \\text{min_production} \\geq 0$\n",
+    "* $ \\text{max_production} \\leq 0$\n",
     "\n",
     "Or factory status is 1 and:\n",
-    "* min_production >= min_capacity\n",
-    "* max_production <= max_capacity\n",
+    "* $ \\text{min_production} \\leq \\text{min_capacity}$\n",
+    "* $ \\text{max_production} \\leq \\text{max_capacity}$\n",
     "\n",
     "*(In some cases we can use linear constraints to model conditional statements, we'll explore this in part 6)*"
    ]
